Features: - Added category section - Better color for speed - Better feedback adding torrent - Better search - Little UI QoL - Better configuration speed - Default search and tag handled - New stunning category - Better indexing
