# routes/category.js
@@ -1,37 +1,62 @@
 const express = require("express");
-const {GAMES, MOVIES, TVSHOW, GENERIC} = require("./classes/type");
+const {GAMES, MOVIES, TVSHOW, GENERIC, FITGIRL} = require("./classes/type");
+const path = require("path");
 
 const router = express.Router();
 
 
 const KEY_VARIABLE_CATEGORY = "KEY_VARIABLE_CATEGORY"
-const DEFAULT_CATEGORY = [
+const DEFAULT_CATEGORY = (downloadPath) => [
     {
         id: 1,
         type: GAMES,
         label: "Games",
-        path: "./torrent/games",
+        path: path.join(downloadPath, "games"),
         tooltip: "A curated list of repacked games",
+        tag: "",
+        defaultSearch: "repack",
     },
     {
         id: 2,
         type: MOVIES,
         label: "Movie",
-        path: "./torrent/movies",
+        path: path.join(downloadPath, "movies"),
         tooltip: "Explore a list of movies",
+        tag: undefined,
+        defaultSearch: "2022",
     },
     {
         id: 3,
-        type: TVSHOW,
-        label: "Tv",
-        path: "./torrent/tvshow"
+        type: MOVIES,
+        label: "Movie 1080p",
+        path: path.join(downloadPath, "movies_HD"),
+        tooltip: "Explore a list of movies (filtered in 1080p)",
+        tag: "1080",
+        defaultSearch: "2022",
     },
     {
         id: 4,
+        type: TVSHOW,
+        label: "Tv",
+        path: path.join(downloadPath, "tvshow"),
+        tag: undefined,
+        defaultSearch: "2022",
+    },
+    {
+        id: 5,
         type: GENERIC,
         label: "General",
-        path: "./torrent/miscellaneous"
+        path: path.join(downloadPath, "miscellaneous"),
+        tag: undefined,
+        defaultSearch: "2022",
+    },
+    {
+        id: 6,
+        type: FITGIRL,
+        label: "FitGirl",
+        path: path.join(downloadPath, "games"),
     }
+
 ]
 
 const getCategory = (req) => {
@@ -39,7 +64,7 @@ const getCategory = (req) => {
     if (output) {
         return output
     } else {
-        return DEFAULT_CATEGORY;
+        return DEFAULT_CATEGORY(req.app.locals.storage.configuration.downloadPath);
     }
 }
 
@@ -93,7 +118,7 @@ router.post('/', async (req, res, next) => {
         type: req.body.type,
         label: req.body.label,
         defaultSearch: req.body.type.defaultSearch,
-        path: req.body.path,
+        path: req.body.path || req.app.locals.storage.configuration.downloadPath,
         tag: req.body.tag,
         tooltip: req.body.tooltip
     }
@@ -106,8 +131,20 @@ router.post('/', async (req, res, next) => {
         }
     }
     categories.push(input);
-    req.app.locals.storage.setVariable(KEY_VARIABLE_CATEGORY, categories);
+    await req.app.locals.storage.setVariable(KEY_VARIABLE_CATEGORY, categories);
     res.status(200).json(input.id)
+});
+router.patch('/', async (req, res, next) => {
+    /*
+        #swagger.tags = ['Category']
+        #swagger.summary = "Restore the default category"
+        #swagger.responses[200] = {
+                description: "If the operation gone fine, it will return the id",
+                schema: true
+            }
+    */
+    await req.app.locals.storage.setVariable(KEY_VARIABLE_CATEGORY, DEFAULT_CATEGORY(req.app.locals.storage.configuration.downloadPath));
+    res.status(200).json(true)
 });
 
 router.put('/:categoryId', async (req, res, next) => {
@@ -135,20 +172,23 @@ router.put('/:categoryId', async (req, res, next) => {
     let categoryId = req.params.categoryId
 
     let input = {
-        id: categoryId,
+        id: parseInt(categoryId),
         type: req.body.type,
         label: req.body.label,
-        defaultSearch: req.body.type.defaultSearch,
+        defaultSearch: req.body.defaultSearch,
         path: req.body.path,
         tag: req.body.tag,
         tooltip: req.body.tooltip
     }
     let categories = getCategory(req);
     if (categories.length > 0) {
-        let index = categories.findIndex(x => x.id === categoryId)
-        if (index) {
+        let index = categories.findIndex(x => x.id == categoryId)
+        console.log("SAVED DATA:", categoryId, index)
+        if (index !== -1) {
             categories[index] = input;
-            req.app.locals.storage.setVariable(KEY_VARIABLE_CATEGORY, categories);
+            await req.app.locals.storage.setVariable(KEY_VARIABLE_CATEGORY, categories);
+            let output = req.app.locals.storage.getVariable(KEY_VARIABLE_CATEGORY)
+            console.log("RETRIEVED DATA:", output)
             res.status(200).json(true)
         } else {
             res.status(200).json(false)
@@ -172,18 +212,20 @@ router.delete('/:categoryId', async (req, res, next) => {
     let categoryId = req.params.categoryId
     let categories = getCategory(req);
     if (categories.length > 0) {
-        let index = categories.findIndex(x => x.id === categoryId)
-        if (index) {
+        let index = categories.findIndex(x => x.id == categoryId)
+        if (index !== -1) {
             categories.splice(index, 1);
-            req.app.locals.storage.setVariable(KEY_VARIABLE_CATEGORY, categories);
+            await req.app.locals.storage.setVariable(KEY_VARIABLE_CATEGORY, categories);
             res.status(200).json(true)
+
         } else {
             res.status(200).json(false)
+
         }
     } else {
         res.status(200).json(false)
+
     }
-    res.status(200).json(true)
 });
 
 module.exports = router;
